Fix spacing and border colour

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,10 @@
 html {
   color: #fff;
-  background-image: linear-gradient(#ff9500, #ff5e3a);
-  font-family: 'Overpass', sans-serif;
+  font-family: Overpass, sans-serif;
+}
+
+main {
+  background-image: linear-gradient(to bottom, #ff9500, #ff5e3a);
 }
 
 i {
@@ -10,7 +13,7 @@ i {
 
 .btn {
   color: #fff;
-  border-color: #fff;
+  border-color: rgba(255, 255, 255, .7);
 }
 
 .btn:hover {
@@ -19,26 +22,18 @@ i {
   background-color: #fff;
 }
 
-.unit {
-  padding: 2em 0;
-}
-
 .center-piece {
-  border-top: rgba(255, 255, 255, 1) 1px solid;
-  border-bottom: rgba(255, 255, 255, 1) 1px solid;
+  border-top: rgba(255, 255, 255, .3) 3px solid;
+  border-bottom: rgba(255, 255, 255, .3) 3px solid;
   border-right: 0;
   border-left: 0;
 }
 
 @media only screen and (min-width: 60em) {
 
-  .unit {
-    padding: 0 2em;
-  }
-
   .center-piece {
-    border-right: rgba(255, 255, 255, 1) 1px solid;
-    border-left: rgba(255, 255, 255, 1) 1px solid;
+    border-right: rgba(255, 255, 255, .3) 3px solid;
+    border-left: rgba(255, 255, 255, .3) 3px solid;
     border-top: 0;
     border-bottom: 0;
   }
